# smart_stats

./: Dockerfile  README.md  cli.py  main.py  pyproject.toml  scripts.sh  test_output.json
apps/extractor/: app.py
apps/loader/: app.py
apps/mcp_server/: app.py
apps/smart_stats/: app.py
apps/test/: app.py
lambda/: extractor.py
services/: extractor.py  llm.py  llm_integration_test.py  llm_test.py  storage.py
services/extractor/: extractor.py  llm.py  test_image_extraction_local.py  test_llm copy.py  test_llm.py  test_llm_integration_.py  test_llm_integration_local.py
services/llm/: llm_integration_test.py
services/loader/: agent.py  app.py  mcp_client.py  mcp_server.py  test_mcp_client.py
services/mcp_server/: db_functions.py
