[project]
name = "smart-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.2",
    "llama-index>=0.13.5",
    "llama-index-llms-bedrock-converse>=0.9.0",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-tools-mcp>=0.4.0",
    "ollama>=0.5.3",
    "pytest>=8.4.1",
]

