[project]
name = "smart-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
extractor = [
    "ollama>=0.5.3",
]
loader = [
    "llama-index>=0.13.5",
    "llama-index-llms-bedrock-converse>=0.9.0",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-tools-mcp>=0.4.0",
]
mcp-server = [
    "fastmcp>=2.12.2",
]
smart-stats = [
    "httpx>=0.28.1",
]
